# gmapper

./: README.md  local.properties
Gestures/: 0  1  5  6  8  9  index.json
gradle/wrapper/: gradle-wrapper.properties
mobile/: CMakeLists.txt  build.gradle
mobile/src/androidTest/java/nl/jamesfrink/gmapper/: ExampleInstrumentedTest.kt
mobile/src/main/: AndroidManifest.xml
mobile/src/main/cpp/: Gesture.hpp  GestureClassifier.cpp  GestureClassifier.hpp  IFTTTThreaded.hpp  InterfaceJNI.cpp  InterfaceJNI.hpp  RingBufferV.hpp  SaveStateManager.cpp  SaveStateManager.hpp  SimpleOSCThreaded.hpp  StateManagerJNI.cpp  ThreadedProcess.h  def.cpp  def.hpp
mobile/src/main/cpp/RapidLib/src/: svmClassification.h  trainingExample.h
mobile/src/main/java/nl/jamesfrink/gmapper/: AccelGlRenderer.kt  ArrayListAdapter.kt  Gesture.kt  GestureAdapter.kt  GestureEditor.kt  GestureFrame.kt  GestureManager.kt  MainActivity.kt  MessageHandler.kt  NonSwipeableViewPager.kt  PagerAdapter.kt  SensorViewer.kt  Settings.kt  SettingsCallback.kt  SwipeToDelete.kt  TrainingSeriesObject.kt  TrainingSeriesObjectAdapter.kt  stateManager.kt
mobile/src/main/res/drawable/: ic_graph.xml  ic_hand.xml
mobile/src/main/res/layout/: activity_main.xml  fragment_gesture_editor.xml  fragment_gesture_frame.xml  fragment_gesture_manager.xml  fragment_sensor_viewer.xml  fragment_settings.xml  gesture_list_element.xml  training_object_list_element.xml
mobile/src/main/res/values/: colors.xml  strings.xml  wear.xml
mobile/src/test/java/nl/jamesfrink/gmapper/: ExampleUnitTest.kt
wear/: build.gradle
wear/src/main/: AndroidManifest.xml
wear/src/main/java/nl/jamesfrink/gmapper/: DataLayerListenerService.kt  MainActivity.kt  MessageHandler.kt  SensorHandler.kt
wear/src/main/res/layout/: activity_main.xml
wear/src/main/res/values/: strings.xml
